--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
+    "ejs": "^3.0.2",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.3",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0"
+    "express-session": "^1.17.2",
+    "mysql2": "^2.3.3"
   }
 }
